# Hyperion

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  ALL_TASKS_COMPLETE.md  CHANGELOG.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.hades  FINAL_SUMMARY.md  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_FINAL.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_JOURNEY.md  OPTIMIZATION_SUMMARY.md  README.md  SUMMARY_AND_NEXT_STEPS.md  TASK_COMPLETE.md  TASK_COMPLETION_CONFIRMATION.md  TASK_COMPLETION_SUMMARY.md  TASK_DONE.md  TASK_FINAL.md  TASK_FINAL_COMPLETE.md  WIZARD_FIX.md  deploy.sh  docker-compose.yml  install.sh  install_hyperion.sh  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  verify-optimizations.sh  vite.config.ts
.github/workflows/: docker-publish.yml
.husky/: commit-msg
Hyperion/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  install_hyperion.sh  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
Hyperion/config/: config.yaml  example-config.yaml
Hyperion/docs/: FEATURES.md
Hyperion/src/: App.tsx  index.css  main.tsx
Hyperion/src-tauri/: Cargo.toml  tauri.conf.json
Hyperion/src-tauri/src/: main.rs
Hyperion/src-tauri/src/clash/: client.rs  websocket.rs
Hyperion/src-tauri/src/commands/: config.rs  mod.rs  proxy.rs  service.rs  update.rs
Hyperion/src-tauri/src/utils/: platform.rs
config/: config.yaml  example-config.yaml
public/: robots.txt
scripts/: termux.sh
src/: App.tsx  index.css  main.tsx
(+140 files in other folders)
