[package]
name = "hyperion"
version = "0.1.0-beta"
description = "Hyperion — A modern Clash kernel frontend"
authors = ["Hyperion"]
edition = "2021"

[lib]
name = "hyperion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
anyhow = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
